--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,9 +8,12 @@
 @import url('./reset.css');
 @import url('./base.css');
 @import url('./container.css');
-@import url('./animations.css');
 
 /* Gallery style */
 
 @import url('./gallery.css');
+
+/* Form style */
+
+@import url('./form.css');
 
