--- a/src/css/form.css
+++ b/src/css/form.css
@@ -1,46 +1,98 @@
-.feedback-form{
-    --background: white;
-    --border: rgba(0, 0, 0, 0.125);
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    
-    flex-direction: column;
+:root{
+    --border-color:#808080;
+    --text-input-color:#2E2F42;
+    --button-color:#4E75FF;
+    --button-hover-color:#6C8CFF;
 }
 
-.feedback-form label{
-    margin-bottom: 10px;
+
+.form-container{
+    box-sizing: border-box;
+    width: 408px;
+    height: 296px;
+    margin: 0 auto;
+    background-color: #fff;
+    box-sizing: border-box;
+    padding: 24px;
+    border-radius: 8px;
 }
+
+.feedback-form{
+    font-family: Montserrat;
+    overflow: hidden;
+    font-weight: 400;
+    font-size: 16px;
+    letter-spacing: 0.04rem;
+    line-height: 1.5;
+
+}
+
+.feedback-form .email{
+    margin-bottom: 8px;
+}
+
+.feedback-form .message{
+    margin-bottom: 16px;
+}
+
 
 .email, .message{
     display: flex;
     flex-direction: column;
-    gap:2px;
+    row-gap:6px;
 
-    color: hsl(var(--fgColorH), var(--fgColorS), var(--fgColorL));
-        font-size: 0.825rem;
-        outline: 1px dashed transparent;
-        outline-offset: 2px;
 }
 
-.email:hover, .message:hover,
-.email:focus,
-.message:focus
+input[name="email"],textarea[name="message"]{
+    min-width: 100%;
+    box-sizing: border-box;
+    border-radius: 4px;
+    font-size: 16px;
+    border: 1px solid var(--border-color);
+
+    font-family: Montserrat;
+
+    color: var(--text-input-color);
+    padding: 8px 16px;
+}
+
+input[name="email"]{
+    height: 40px;
+}
+
+textarea[name="message"]{
+    max-height: 80px;
+}
+
+
+
+input[name="email"]:hover, textarea[name="message"]:hover,
+input[name="email"]:focus,
+textarea[name="message"]:focus
 {
-    color: hsl(var(--fgColorH), var(--fgColorS), calc(var(--fgColorL) * 0.85));
-        transition: color 0.25s;
+    border-color:  #000000;
+    transition: border-color 0.25s;
 }
 
 button{
-    background-color: rgb(144,199,252);
+    box-sizing: border-box;
+    background-color: var(--button-color);
     border: none;
-    padding: 10px;
-    border-radius: 10px;
+    height: 40px;
+    width: 95px;
+    font-size: 16px;
+    font-weight: 500;
+    
+    padding: 8px 16px;
+    border-radius: 8px;
+    color: #fff;
+    letter-spacing: 0.04rem;
 
 }
 
 button:hover,button:focus{
-background-color: rgb(129,147,219);
+background-color: var(--button-hover-color);
 transition: background-color 0.25s;
 }
+
 
