--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -1,6 +1,8 @@
 :root {
     --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    --animation-duration: 250ms; }
+    --animation-duration: 250ms; 
+    --overlay-color:#2E2F42CC;
+}
 
 .gallery-container{
     display: block;
@@ -54,30 +56,10 @@ li {
     list-style-type: none;
 }
 
-.basicLightbox {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #2E2F42CC;
-    z-index: 9999;
-
+.sl-overlay {
+    background: var(--overlay-color) !important;
 }
 
-.basicLightbox__placeholder {
-    width: 1112px;
-    height: 640px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.sl-close,.sl-counter,.sl-prev,.sl-next{
+    color: #fff !important;
 }
-
-.basicLightbox__placeholder img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
-    display: block; }
