--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -25,10 +25,28 @@ a {
 
 button {
   cursor: pointer;
+  
 }
 
 img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+textarea {
+  border: none;
+  overflow: auto;
+  outline: none;
+
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+
+  resize: none;
+}
+
+input{
+  -webkit-appearance: none;
+  appearance: none;
 }
