--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -50,3 +50,8 @@ input{
   -webkit-appearance: none;
   appearance: none;
 }
+
+input:hover,input:focus,input:active{
+  border-color: transparent;
+  outline: none;
+}
