--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,7 +1,6 @@
 :root {
   /* font-family: Inter, Avenir, Helvetica, Arial, sans-serif; */
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: Montserrat;
   font-size: 16px;
   line-height: 1.5;
   font-weight: 400;
@@ -14,6 +13,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  --button-hover-color: #6C8CFF;
 }
 
 body {
@@ -38,4 +39,28 @@ input{
 
 textarea {
   box-sizing: border-box;
+}
+
+.navigation-link{
+  display: block;
+  font-size: 24px;
+  padding-bottom: 12px;
+}
+
+.navigation-link:hover, .navigation-link:focus{
+  color:#6C8CFF;
+  transition: color 0.25s;
+
+
+}
+
+.main-page .container .navigation-link:hover::after,
+.main-page .container .navigation-link:focus::after{
+  content: " →";
+}
+
+.main-page .container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
